k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopping-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: customer-service.objectworld
    http:
      paths:
      - backend:
          service:
            name: customer-svc
            port:
              number: 80
        path: /customer
        pathType: Prefix
      - backend:
          service:
            name: product-svc
            port:
              number: 80
        path: /product
        pathType: Prefix
      - backend:
          service:
            name: order-svc
            port:
              number: 80
        path: /order
